objects/acknowltng__acUserFeedback__c.object
<CustomObject>
    <fields>
        <fullName>acknowltng__Article_Id__c</fullName>
        <label>Article Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acknowltng__Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acknowltng__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Feedback</label>
    <listViews>
        <fullName>acknowltng__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UF-{0000000}</displayFormat>
        <label>User Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>